# mega-bundle-size

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
mega_bundle_size/: __init__.py  core.py
tests/: test_mega_bundle_size.py
